[project]
name = "draw-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.184.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.39.1",
    "mcp[cli]>=1.15.0",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
]
